sumo/tests/marouter/errors/incomplete_districts/both_missing1of2/routes.marouter
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 10/02/15 12:27:49 by SUMO marouter Version dev-SVN-r18990
<?xml version="1.0" encoding="UTF-8"?>

<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/marouterConfiguration.xsd">

    <input>
        <net-file value="input_net.net.xml"/>
        <additional-files value="input_taz.taz.xml"/>
        <od-matrix-files value="input_od_o.fma"/>
    </input>

    <output>
        <output-file value="routes.rou.xml"/>
    </output>

    <report>
        <xml-validation value="never"/>
    </report>

</configuration>
-->

<routes xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/routes_file.xsd">
    <flow id="0" begin="0.00" end="86400.00" number="24" fromTaz="1" toTaz="2" departLane="free" departSpeed="max">
        <routeDistribution>
            <route cost="89.99" probability="24.00000000" edges="middle end"/>
        </routeDistribution>
    </flow>
</routes>
